--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -81,11 +81,29 @@
     "md5-file": "^3.2.3",
     "pretty-format": "^26.5.2",
     "uuid": "^3.4.0",
+    "tempy": "^0.7.1",
+    "form-data": "^2.3.2",
+    "ora": "3.4.0",
+    "minipass": "2.3.5",
     "@expo/prebuild-config": "^3.0.15",
     "@expo/config-plugins": "^4.0.15",
     "@expo/config": "^6.0.15",
+    "terminal-link": "^2.1.1",
+    "@expo/package-manager": "0.0.49",
     "chalk": "^4.0.0",
-    "getenv": "^1.0.0"
+    "fs-extra": "9.0.0",
+    "js-yaml": "^3.13.1",
+    "@expo/json-file": "8.2.34",
+    "node-fetch": "^2.6.0",
+    "@expo/spawn-async": "1.5.0",
+    "prompts": "^2.3.2",
+    "resolve-from": "^5.0.0",
+    "find-up": "^5.0.0",
+    "getenv": "^1.0.0",
+    "cacache": "^15.3.0",
+    "semver": "^7.3.2",
+    "slugify": "^1.3.4",
+    "tar": "^6.0.5"
   },
   "optionalDependencies": {
     "expo-error-recovery": "~3.0.4"
@@ -101,10 +119,14 @@
     "@taskr/esnext": "1.1.0",
     "@taskr/watch": "1.1.0",
     "@types/fbemitter": "^2.0.32",
+    "@types/prompts": "^2.0.6",
     "@types/invariant": "^2.2.33",
+    "@types/js-yaml": "^3.12.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/form-data": "^2.2.0",
+    "@types/cacache": "^15.0.1",
     "@types/uuid": "^3.4.7",
     "arg": "4.1.0",
     "cross-env": "^7.0.3",
