--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -61,9 +61,14 @@
     "@babel/runtime": "^7.14.0",
     "@expo/config": "^6.0.15",
     "@expo/config-plugins": "^4.0.15",
+    "@expo/json-file": "8.2.34",
     "@expo/metro-config": "~0.3.7",
+    "@expo/package-manager": "0.0.49",
+    "@expo/prebuild-config": "^3.0.16",
+    "@expo/spawn-async": "1.5.0",
     "@expo/vector-icons": "^12.0.4",
     "babel-preset-expo": "~9.0.1",
+    "cacache": "^15.3.0",
     "chalk": "^4.0.0",
     "cross-spawn": "^6.0.5",
     "expo-application": "~4.0.1",
@@ -75,30 +80,24 @@
     "expo-modules-autolinking": "0.5.5",
     "expo-modules-core": "0.6.1",
     "fbemitter": "^2.1.1",
+    "form-data": "^2.3.2",
+    "fs-extra": "9.0.0",
     "getenv": "^1.0.0",
     "invariant": "^2.2.4",
-    "md5-file": "^3.2.3",
-    "pretty-format": "^26.5.2",
-    "uuid": "^3.4.0",
-    "tempy": "^0.7.1",
-    "form-data": "^2.3.2",
-    "ora": "3.4.0",
-    "minipass": "2.3.5",
-    "@expo/prebuild-config": "^3.0.16",
-    "terminal-link": "^2.1.1",
-    "@expo/package-manager": "0.0.49",
-    "fs-extra": "9.0.0",
     "js-yaml": "^3.13.1",
-    "@expo/json-file": "8.2.34",
+    "md5-file": "^3.2.3",
+    "minipass": "2.3.5",
     "node-fetch": "^2.6.0",
-    "@expo/spawn-async": "1.5.0",
+    "ora": "3.4.0",
+    "pretty-format": "^26.5.2",
     "prompts": "^2.3.2",
     "resolve-from": "^5.0.0",
-    "getenv": "^1.0.0",
-    "cacache": "^15.3.0",
     "semver": "^7.3.2",
     "slugify": "^1.3.4",
-    "tar": "^6.0.5"
+    "tar": "^6.0.5",
+    "tempy": "^0.7.1",
+    "terminal-link": "^2.1.1",
+    "uuid": "^3.4.0"
   },
   "optionalDependencies": {
     "expo-error-recovery": "~3.0.4"
@@ -113,19 +112,20 @@
     "@taskr/clear": "1.1.0",
     "@taskr/esnext": "1.1.0",
     "@taskr/watch": "1.1.0",
+    "@types/cacache": "^15.0.1",
     "@types/fbemitter": "^2.0.32",
-    "@types/prompts": "^2.0.6",
+    "@types/form-data": "^2.2.0",
     "@types/invariant": "^2.2.33",
     "@types/js-yaml": "^3.12.2",
+    "@types/prompts": "^2.0.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/form-data": "^2.2.0",
-    "@types/cacache": "^15.0.1",
     "@types/uuid": "^3.4.7",
     "arg": "4.1.0",
     "cross-env": "^7.0.3",
     "expo-module-scripts": "^2.0.0",
+    "klaw-sync": "^6.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
